댓글 기능 추가

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 
 <body>
     <h1><a href="file:///C:/Users/CKIRUser/Desktop/Untitled-1.html">북커</a></h1>
+    <h3>
+        동영상 삽입하기
+    </h3>
+    <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE?si=JMBFYvVet9a51CXN" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </p>
+    
     <ol>
         <li><a href="1.html">책 저장하기</a></li> 
         <li><a href="2.html">금주의 추천 책</a></li> 
@@ -32,5 +41,26 @@
     <strong><u>북커</u></strong>는 자신이 읽었던 책의 기록을 저장할 수 있습니다. 
     자신만의 책장을 꾸미고, 메모하며 당신에게 영감을 준 책과 함께 했던 순간들을
     <strong><u>북커</u></strong>에서 바로 기억의 저편으로 떠나가는 추억들을 남겨보세요.
+    <p>
+                <div id="disqus_thread"></div>
+        <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://booker-1.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </p>
 </body>
 </html>
